tests/files/type_checker_tests/should_fail/199.cmdr
//Should fail import if file does not type check
import "20.cmdr";
